--- a/server/public/css/variables.css
+++ b/server/public/css/variables.css
@@ -125,7 +125,6 @@ body {
 }
 
 html {
-    overflow: hidden;
     overscroll-behavior: none;
 }
 
